fix: header and sidebar aligned with rem

--- a/src/app/features/sidebar/sidebar.component.less
+++ b/src/app/features/sidebar/sidebar.component.less
@@ -19,7 +19,7 @@
     color: @font-default-black;
   }
   h4 {
-    margin: 1rem 0 0;
+    margin: 1rem 1rem 0 0;
   }
   h2 {
     text-align: center;
@@ -40,7 +40,6 @@
     .category-mobile {
       display: flex;
       justify-content: flex-end;
-      transform: translate(15vw, 23vh);
     }
     &.open {
       width: 100vw;
@@ -65,21 +64,21 @@
     }
   }
   @media @tablet-l {
-    width: 12vw;
+    width: 6rem;
     .category-mobile {
-      transform: translate(15vw, 12vh);
+      transform: translate(8.5rem, 7.5rem);
     }
   }
   @media @tablet-m {
-    width: 15vw;
+    width: 6rem;
     .category-mobile {
-      transform: translate(15vw, 12vh);
+      transform: translate(7rem, 7rem);
     }
   }
   @media @phone {
-    width: 27vw;
+    width: 6rem;
     .category-mobile {
-      transform: translate(2vw, 15vh);
+      transform: translate(2rem, 9.5rem);
     }
   }
 }
